--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-python-telegram-bot[webhooks]>=20.5
+python-telegram-bot[webhooks]==22.0
 openai>=1.0.0
-python-dotenv
+python-dotenv>=1.1.0
+aiohttp>=3.8.5
