--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,6 @@ services:
   - type: web
     name: dataklinik-bot
     env: python
-    region: oregon
-    plan: starter          # или платный, чтобы не засыпал после простоя
-    autoDeploy: true
     buildCommand: "pip install -r requirements.txt"
     startCommand: "python main.py"
     envVars:
@@ -12,5 +9,8 @@ services:
         sync: false
       - key: OPENAI_API_KEY
         sync: false
+    plan: starter      # или любой платный/ Starter для zero-downtime
+    autoDeploy: true
+    region: oregon
     ports:
       - port: 10000
