--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-python-telegram-bot[webhooks]==22.0
+python-telegram-bot[webhooks]>=20.5
 openai>=1.0.0
-python-dotenv>=1.1.0
-aiohttp>=3.8.5
+python-dotenv
