--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot[webhooks]>=20.5
-openai>=1.0.0
+python-telegram-bot==20.3
+openai
+gspread
+oauth2client
 python-dotenv
-requests
