Полностью переработан парсер и логика: свободный порядок полей, внешнее services.json, датаparser с базой, запись в Google Sheets и уведомление в группу

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-python-telegram-bot[webhooks]==20.3
-openai
+python-telegram-bot[webhooks]>=20.5
+openai>=1.0.0
+python-dotenv
 gspread
 oauth2client
-python-dotenv
-dateparser>=1.1.0
+dateparser
